--- a/css/general.css
+++ b/css/general.css
@@ -7,6 +7,7 @@
 html {
   /* font-size: 20px; */
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -14,6 +15,7 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+  overflow-x: hidden;
 }
 
 /**********************/
@@ -46,10 +48,6 @@ body {
 
 .grid--4-cols {
   grid-template-columns: repeat(4, 1fr)
-}
-
-.grid--5-cols {
-  grid-template-columns: repeat(5, 1fr)
 }
 
 .grid--center-v {
@@ -179,6 +177,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.6rem;
+  line-height: 1.2;
 }
 
 .list-icon {
