--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 
 .logo {
@@ -25,7 +26,7 @@
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 
 .main-nav-link:link,
@@ -54,6 +55,25 @@
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
   background-color: #cf711f;
+}
+
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #333;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
 }
 
 /*********************/
@@ -168,15 +188,15 @@
   line-height: 1.8;
 }
 
-.step-box-img {
+.step-img-box {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.step-box-img::before,
-.step-box-img::after {
+.step-img-box::before,
+.step-img-box::after {
   content: "";
   display: block;
   border-radius: 50%;
@@ -186,14 +206,14 @@
   transform: translate(-50%, -50%);
 }
 
-.step-box-img::before {
+.step-img-box::before {
   width: 60%;
   padding-bottom: 60%;
   background-color: #fdf2e9;
   z-index: -2;
 }
 
-.step-box-img::after {
+.step-img-box::after {
   width: 45%;
   padding-bottom: 45%;
   background-color: #fae5d3;
@@ -224,7 +244,6 @@
   transform: translateY(-1.2rem);
   box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
 }
-
 
 .meal-content {
   padding: 3.2rem 4.8rem 4.8rem 4.8rem;
@@ -473,8 +492,6 @@ s .plan-name {
   grid-template-columns: 2fr 1fr;
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
   border-radius: 11px;
-  height: 50rem;
-
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
   overflow: hidden;
 }
